Gap fixed.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	/* gap: 16px; */
 	height: min-content;
 	justify-content: flex-start;
 	overflow: visible;
@@ -49,7 +48,7 @@ body {
 	flex: none;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	gap: 64px;
+	gap: 48px;
 	height: min-content;
 	justify-content: center;
 	overflow: hidden;
